Bug Fix: System audio capture abnormal when microphones missing

When querying audio parameters for a given device id, we check the existence of microphones, which is correct if we want to capture microphone stream.
But it is not a correct check, if we need to capture the system audio, we should instead guarantee the existence of a speaker device.

Bug: 738053
Cq-Include-Trybots: master.tryserver.chromium.android:android_optional_gpu_tests_rel;master.tryserver.chromium.linux:linux_optional_gpu_tests_rel;master.tryserver.chromium.mac:mac_optional_gpu_tests_rel;master.tryserver.chromium.win:win_optional_gpu_tests_rel
Change-Id: I2511da28c23cd44b1077efd52f1c80b1b5aed848
Reviewed-on: https://chromium-review.googlesource.com/550935
Reviewed-by: Yuri Wiitala <miu@chromium.org>
Reviewed-by: Olga Sharonova <olka@chromium.org>
Commit-Queue: Qiang Chen <qiangchen@chromium.org>
Cr-Commit-Position: refs/heads/master@{#483733}
Former-commit-id: 84323803d1079a3c3180196b7947fff6064550c5